--- a/src/Routing/Footer/Footer.scss
+++ b/src/Routing/Footer/Footer.scss
@@ -1,6 +1,18 @@
 .Footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
     width: 100%;
     height: 10%;
     align-self: flex-end;
-    background-color: chocolate;
+    background-color: darkgrey;
+    & p{
+        margin: 0% 20px;
+        align-self: center;
+    }
+    & .icon{
+        margin: 0% 20px;
+        align-self: center;
+        cursor: pointer;
+    }
 }
