--- a/src/Routing/Header/Header.scss
+++ b/src/Routing/Header/Header.scss
@@ -1,5 +1,56 @@
-.Header{
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+.headerContainer{
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
     height: 10%;
-    background-color: brown;
+    font: {
+        family: Raleway, sans-serif;
+        style: normal;
+        weight: normal;
+        size: 16px;
+    }
+    line-height: 120%;
+    & p{
+        margin: 0%;
+    }
+    & > p{
+        width: 5%;
+        height: 100%;
+        padding-top: 1.7%;
+        font-weight: bold;
+        border: 1px solid black;
+    }
+    & .fieldContainer{
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        border: 1px solid black;
+        & .icon{
+            width: 30px;
+            cursor: pointer;
+        }
+    }
+    & .fieldContainer:nth-child(2){
+        justify-content: center;
+        width: 70%;
+        & .title{
+            padding: 2.5% 2% 0% 0%;
+        }
+        & .icon{
+            padding-top: 1.7%;
+        }
+    }
+    & .fieldContainer:nth-child(3){
+        justify-content: space-around;
+        width: 15%;
+    }
+    & .fieldContainer:last-child{
+        justify-content: space-around;
+        width: 10%;
+        & .title{
+            width: 100%;
+        }
+    }
 }
