--- a/src/Routing/Table/Table.scss
+++ b/src/Routing/Table/Table.scss
@@ -1,7 +1,6 @@
 .Table{
-    display: flex;
-    flex-wrap: wrap;
+    /*display: flex;
+    flex-wrap: wrap;*/
     width: 90%;
-    height: 90vh;
-    background-color: blue;
+    height: 50vh;
 }
