--- a/src/Routing/Home/Home.scss
+++ b/src/Routing/Home/Home.scss
@@ -1,5 +1,11 @@
 .homeContainer{
-    width: 70%;
-    min-width: 768px;
-    margin: 10vh auto;
+    width: 98%;
+    min-width: 320px;
+    margin: 80px auto 0px auto;
+    height: calc(100vh - 80px);
+}
+@media only screen and (min-width: 768px){
+    .homeContainer{
+        width: 90%;
+    }
 }
