--- a/src/Routing/Table/Table.scss
+++ b/src/Routing/Table/Table.scss
@@ -1,6 +1,10 @@
 .Table{
-    /*display: flex;
-    flex-wrap: wrap;*/
-    width: 90%;
-    height: 50vh;
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px){
+    .Table{
+        width: 100%;
+        height: 50vh;
+    }
 }
