--- a/src/Routing/Manufacturer/Manufacturer.scss
+++ b/src/Routing/Manufacturer/Manufacturer.scss
@@ -12,6 +12,7 @@
         display: flex;
         flex-wrap: wrap;
         width: 100%;
+        height: 2em;
         background-color: white;
         border: 1px solid black;
         border-radius: 5px;
@@ -20,7 +21,8 @@
         display: flex;
         flex-wrap: wrap;
         width: 100%;
-        background-color: lightsalmon;
+        height: 2em;
+        background-color: cornsilk;
     }
     & p{
         margin: 0%;
@@ -28,7 +30,7 @@
             family: Raleway, sans-serif;
             style: normal;
             weight: normal;
-            size: 10px;
+            size: 12px;
         }
         line-height: 120%;
         &:first-child{
@@ -43,6 +45,20 @@
         }
         &:last-child{
             width: 58%;
+        }
+    }
+}
+
+@media only screen and (min-width: 768px){
+    .manufacturerContainer{
+        & #header{
+            height: 3em;
+        }
+        & #fabData{
+            height: 3em;
+        }
+        & p{
+            font-size: 16px;
         }
     }
 }
