--- a/src/Routing/Seeker/Seeker.scss
+++ b/src/Routing/Seeker/Seeker.scss
@@ -70,7 +70,7 @@
         top: 80px;
         width: 100%;
         height: 60vh;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
@@ -122,7 +122,7 @@
             top: 80px;
             width: 80%;
             height: 50vh;
-            overflow-y: scroll;
+            overflow-y: auto;
         }
     }
 }
